network_policies/front_to_back_np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
name: allow-frontend-to-backend
namespace: web-app
spec:
  podSelector:
  matchLabels:
  app: backend
ingress:
from:
podSelector:
matchLabels:
app: frontend
